basic app window up and running

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "productivity display",
   "main": "main.js",
   "scripts": {
+    "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Chris Hjelmfelt",
